# abacus-fd

./: .gitignore  AGENTS.md  README.md  abacus_finidiff.py  pyproject.toml
abacus_fd/: __init__.py  core.py
