[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abacus-fd"
version = "0.1.0"
description = "ABACUS Finite Difference: Compute forces via finite difference with ABACUS DFT software"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ABACUS Developers"}
]
keywords = ["abacus", "dft", "finite-difference", "forces", "tddft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase @ git+https://gitlab.com/1041176461/ase-abacus.git",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "setuptools>=61.0",
]

[project.scripts]
abacus-fd = "abacus_fd:main"

[project.urls]
Homepage = "https://github.com/abacus-deep/abacus-finidiff"
Repository = "https://github.com/abacus-deep/abacus-finidiff"

[tool.setuptools.packages.find]
where = ["."]
include = ["abacus_fd*"]

[tool.setuptools.package-data]
abacus_fd = ["py.typed"]
